<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Bantuan_Menus.ExplanationForMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--Row 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/quraan"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_koran"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingTop="10dp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/header1"/>

                <TextView
                    android:id="@+id/paraf1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/paraf1"/>

            </LinearLayout>

            <!--Row 2-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="47dp"
                    android:src="@drawable/ic_bookmark_black_shape"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingTop="10dp"
                    android:text="@string/header2"/>

                <TextView
                    android:id="@+id/paraf2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/paraf2"/>

            </LinearLayout>

            <!--Row 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_quran"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingTop="10dp"
                    android:text="@string/header3"/>

                <TextView
                    android:id="@+id/paraf3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/paraf3"/>

            </LinearLayout>

            <!--Row 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_school_black"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingTop="10dp"
                    android:text="@string/header4"/>

                <TextView
                    android:id="@+id/paraf4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/paraf4"/>

            </LinearLayout>

            <!--Row 5-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_question_mark"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingTop="10dp"
                    android:text="@string/header5"/>

                <TextView
                    android:id="@+id/paraf5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/paraf5"/>

            </LinearLayout>

            <!--Row 6-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_info_button"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingTop="10dp"
                    android:text="@string/header6"/>

                <TextView
                    android:id="@+id/paraf6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/paraf6"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>